--- a/src/app/players/players.component.html
+++ b/src/app/players/players.component.html
@@ -28,8 +28,15 @@
 
     
     <hr class="border1">
-    <div class="categoryName">
- {{parameterValue}}
+    <div class="flex">
+
+        <div class="categoryName">
+            {{parameterValue}}
+        </div>
+        <div id="material">
+            <a routerLink="/categorypage"> <i class="material-icons">close</i></a> 
+        </div>
+        
     </div>
 
           
