--- a/src/app/vouchers/vouchers.component.css
+++ b/src/app/vouchers/vouchers.component.css
@@ -28,10 +28,11 @@ border-radius: 50%;
 
 }
 
+
 .material-icons{
 text-align: center;
 margin-left: 9px;
-margin-top: 8px;
+margin-top: 9px;
 font-size: 28px;
     
 }
@@ -55,8 +56,8 @@ margin-top: 20px;
     font-family: 'Ubuntu', sans-serif !important;
     }
     .image{
-        width: 219px;
-        height: 80px;
+        width: 218px;
+        height: 79px;
         border-radius: 20px;
         text-align: center;  
         opacity: 1;
@@ -174,6 +175,8 @@ opacity: 1;
  }
 
  #categories a{
-font-size: 21px;
+font-size: 24px;
+font-weight: 1000;
+font-family: 'Ubuntu', sans-serif !important;
  }
 
