--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -234,7 +234,7 @@
         </div>
         <div class="col">
             <div class="column3">
-        MOVESION.COM
+  movesion.com
               </div>
         </div>
 
