--- a/src/app/players/players.component.css
+++ b/src/app/players/players.component.css
@@ -208,12 +208,26 @@
   
 }
 
+
+#material{
+    margin-left: 250px;
+
+box-shadow: 0px 3px 10px #00000029;
+border: 1px solid #FFFFFF;
+opacity: 1;
+width: 50px;
+height: 49px;
+border-radius: 50%;
+
+}
+
+
 .material-icons{
-  width: 20px;
-  height: 20px;
-  background-color:rgb(255, 255, 255);
-  border-radius: 25px;
-  border: none;
+text-align: center;
+margin-left: 9px;
+margin-top: 9px;
+font-size: 28px;
+    
 }
 .search-btn{
   background-color: rgb(255, 255, 255);
@@ -313,6 +327,8 @@ color: #FFFFFF;
   height:28px;
   margin-left: 410px;
   font-size: 25px;
+
+  align-self: center;
 }
 
 
@@ -349,7 +365,19 @@ margin-left:100px;
 margin-top: 35px;
 color: #E3BE60;
 text-align: center;
+margin-bottom: 5px;
+}
 
+
+#material a{
+  /* text-decoration: none;
+  color: rgb(255, 255, 255); */
+}
+
+.flex{
+  display: flex;
+  flex-direction: row;
+  align-self: start;
 
 }
 .border2{
@@ -357,7 +385,7 @@ border: 2px solid;
 opacity: 1;
 width: 699px;
 margin-left:100px;
-margin-top: 10px;
+margin-top: 8px;
 margin-bottom: 25px;
 color: #E3BE60
 
