--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,9 +50,9 @@
 
 <mat-menu #menu="matMenu" class="matMenu">
 
-  <button mat-menu-item (click)="openModal()" >I miei benefit</button>
-  <button mat-menu-item><span class="material-icons">manage_accounts</span> myAccount </button>
-  <button mat-menu-item >Logout</button>
+  <button mat-menu-item (click)="openModal()" > &nbsp; &nbsp; &nbsp; I miei benefit</button>
+  <button mat-menu-item><span class="material-icons">manage_accounts</span> MyAccount </button>
+  <button mat-menu-item >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Logout</button>
 
 </mat-menu>
 
