--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -1,38 +1,19 @@
-
-
-.maincontainer{
-
-}
-
-
-#exampleModalLabel{
-text-align: center;
-}
-
-.flex{
-  
-display: flex;
-flex-direction: row;
-gap:10px;
-}
-
-.container{
-    width: 200px;
-height: 40px;
-background: #b5b5b5 0% 0% no-repeat padding-box;
-border-radius: 100px;
-opacity: 1;
-}
-
 .container1{
-  
-    box-shadow: #9a9a9a;
-    margin: 50px;
-    width: 1040px;
-   height:500px;
-    display: flex;
+    min-width: 200px;
+    padding: 40px;
+    margin-top: 50px;
 }
 
-.table{
-   
+.custom a{
+    text-decoration: none;
+    color: black;
+
 }
+
+@media screen and (max-width: 991px) {
+    .container1{
+    width: 500px;
+    height: 500px;
+    
+    }
+  }
